package in_myfiles.behavioral_pattern.facade_and_command_and_observer

interface IExecutable {
    fun onResult(result: FileOperationResult)
}