package in_myfiles.behavioral_pattern.facade_and_command_and_observer

interface ResultListener {
    fun onResult(result: MenuExecuteResult)
}